@@ -105,6 +105,7 @@ The node will be created below the header.
 - https://github.com/eclipse-sirius/sirius-web/issues/2549[#2549] [diagram] Prevent the arrange-all to break the layout of node list.
 It uses our algorithm instead of elk.js to perform the arrange-all.
 - https://github.com/eclipse-sirius/sirius-web/issues/2591[#2591] [diagram] Give the right node descriptions to node convert handlers.
+- https://github.com/eclipse-sirius/sirius-web/issues/2601[#2601] [emf] Fix an issue in `EditingContextCrossReferenceAdapter` where references to moved objects were lost.
 
 === New Features
 
